<resources>
    <string name="app_name">Routine</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_projects">Assignments</string>
    <string name="nav_about">About</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_header_subtitle">Hi there!</string>
    <string name="nav_share">Share</string>
    <string name="nav_courses">Courses</string>
    <string name="title_activity_course">Course Information</string>
    <string name="EXTRA_COURSE_UUID">com.siddhant.extra.course_uuid</string>
    <string name="EXTRA_MODULE_UUID">com.siddhant.extra.module_uuid</string>
    <string name="action_edit">Edit Course</string>
    <string name="action_delete_all">Delete all courses</string>
    <string name="action_delete">Delete course</string>
    <string name="action_clear_all">Mark module not done</string>
    <string name="action_done">Mark module done</string>
    <string name="module_topics">Topics %1$d/%2$d</string>
    <string name="course_modules">%1$d/%2$d modules done</string>
    <string name="examinations">Examinations</string>
    <string name="course_name">Course Name</string>
    <string name="minus">-</string>
    <string name="course_default_modules">2</string>
    <string name="number_of_modules">Number of modules</string>
    <string name="module_list_title">Module %1$d</string>
    <string name="action_discard">Discard changes</string>
    <string name="hundred_percent">100%</string>
    <string name="module_percent">%1$d%%</string>
    <string name="project_title">My Project</string>
    <string name="due_on">Due on</string>
    <string name="select_date">Tap here to pick a date</string>
    <string name="course_linked">Linked to a course</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="no_due_date">No due date</string>
    <string name="notes">Notes</string>


</resources>
