<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_top_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/nav_courses" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_projects" />
    </group>

    <group android:id="@+id/nav_bottom_menu"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/nav_feedback" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

</menu>
