<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_course_course_name_parent"
        android:layout_margin="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/project_title"
            android:hint="@string/project_title"
            android:gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:inputType="textCapSentences|textAutoCorrect" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_on"
        android:layout_gravity="center"
        android:textColor="@color/colorTopicDone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/project_due_button"
        android:layout_gravity="center"
        android:visibility="visible"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/select_date" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/course_linked"
        android:enabled="false"
        android:checked="false"
        android:id="@+id/course_linked_checkbox"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/project_date_picker"
        android:visibility="gone"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center"

        android:id="@+id/project_linked_course"/>

</LinearLayout>