<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/module_update_card_view"
    android:transitionName="card_view"
    android:clipChildren="false"
    android:layout_marginTop="80dp"
    android:layout_marginBottom="80dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/module_card_title"
            android:text="@string/module_list_title"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/module_card_total_topics"
            android:layout_below="@id/module_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_topics"
            android:paddingBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/module_card_total_topics"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/module_card_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:max="10000" />

        <TextView
            android:id="@+id/module_done_percent"
            android:transitionName="module_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_above="@id/module_card_progress_bar"
            android:textSize="20sp"
            android:textColor="@color/colorDarkerGrey"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/hundred_percent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/module_card_progress_bar"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/module_update_topic_list" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/module_update_clear_all"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:contentDescription="@string/action_clear_all"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/module_update_mark_done"
                    android:src="@drawable/ic_playlist_add_check_black_24dp"
                    android:contentDescription="@string/action_clear_all"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>